Enhance pyq_1.java and pyq_2.java with additional stream operations for counting unique words and improved data processing; refactor existing code for clarity and efficiency.